Bugfix by Zarabadoo: Make the filters on the events listing collapse on the medium screens.

--- a/css/global.base.css
+++ b/css/global.base.css
@@ -79,7 +79,7 @@ input[type="button"] {
   -webkit-background-clip: padding;
   -moz-background-clip: padding;
   background-clip: padding-box;
-  background: #dddddd url('../images/button.png?1361990050') repeat-x;
+  background: #dddddd url('../images/button.png?1363371593') repeat-x;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #dddddd));
   background-image: -webkit-linear-gradient(#ffffff, #dddddd);
   background-image: -moz-linear-gradient(#ffffff, #dddddd);
@@ -313,7 +313,7 @@ optgroup::-moz-focus-inner {
 .ie6_button,
 * html button,
 * html a.button {
-  background: #dddddd url('../images/button.png?1361990050') repeat-x;
+  background: #dddddd url('../images/button.png?1363371593') repeat-x;
   border: 1px solid;
   border-color: #dddddd #bbbbbb #999999;
   cursor: pointer;
@@ -454,7 +454,7 @@ optgroup::-moz-focus-inner {
   right: 0;
   width: 23px;
   height: 100%;
-  background: url('../images/jquery.selectBox-arrow.gif?1361990050') 50% center no-repeat;
+  background: url('../images/jquery.selectBox-arrow.gif?1363371593') 50% center no-repeat;
   border-left: solid 1px #bbbbbb;
 }
 .block-search .selectBox-dropdown .selectBox-arrow {
